fix profile page + performance improvement, update application properties