@@ -7,7 +7,6 @@ import de.sremer.crawlicious.repository.PostingRepository;
 import de.sremer.crawlicious.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -15,7 +14,6 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,46 +24,37 @@ public class PostingService {
     private final TagService tagService;
 
     public List<Posting> getPostingsByUser(User user) {
-        return this.postingRepository.findAllByUser(user);
+        return postingRepository.findAllByUser(user);
     }
 
     public Page<Posting> getPostingsPageByUser(User user, Pageable pageable) {
-        return this.postingRepository.findByUser(user, pageable);
+        return postingRepository.findByUser(user, pageable);
     }
 
     public Page<Posting> getPostingsPageByUserAndTags(User user, List<Tag> tags, Pageable pageable) {
         List<String> tagList = tags.stream()
                 .map(Tag::getName)
                 .map(String::toLowerCase)
-                .collect(Collectors.toList());
-        List<Posting> byUserAndTag = this.postingRepository.findByUserAndTags(user.getId(), tagList);
-        int pageNumber = pageable.getPageNumber();
-        int pageSize = pageable.getPageSize();
-        int count = byUserAndTag.size();
+                .toList();
 
-        int from = pageNumber * pageSize;
-        int to = from + pageSize;
-        to = Math.min(to, count);
-        List<Posting> subList = byUserAndTag.subList(from, to);
-
-        return new PageImpl<>(subList, pageable, count);
+        return postingRepository.findByUserAndTags(user.getId(), tagList, pageable);
     }
 
     public Posting getPostingById(UUID id) {
-        return this.postingRepository.findById(id).get();
+        return postingRepository.findById(id).get();
     }
 
     public void deletePostingById(UUID id) {
-        this.postingRepository.deleteById(id);
+        postingRepository.deleteById(id);
     }
 
     public void updatePosting(Posting posting) {
-        this.postingRepository.save(posting);
+        postingRepository.save(posting);
     }
 
     public void insertPosting(Posting posting) {
         posting.setDate(System.currentTimeMillis());
-        this.postingRepository.save(posting);
+        postingRepository.save(posting);
     }
 
     public void addTagToPosting(UUID postingId, String tag) {
